# niddle

./: .gitignore  .taplo.toml  CONTRIBUTING.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  patch.d.ts  typedoc.json
.github/workflows/: CI.yml
.husky/: pre-commit
__test__/: index.spec.mjs  jquery.html  svg_ns.html
benchmark/: benchmark.mjs  cheerio-htmlparser2.mjs  cheerio-parse5.mjs  cheerio.mjs  niddle.mjs
crates/niddle_napi/: Cargo.toml
crates/niddle_napi/src/: lib.rs  serializer.rs
crates/niddle_napi/src/node_repr/: mod.rs  modify.rs  query.rs
docs/: index.html  modules.html
docs/assets/: navigation.js  search.js
docs/functions/: parse.html
docs/interfaces/: NodeRepr.html
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: element_ref.rs  lib.rs  node_repr.rs  serializer.rs
src/node_repr/: mod.rs  modify.rs  query.rs
test/: index.spec.mjs  svg_ns.html
