[package]
edition = "2021"
name    = "niddle_napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
html5ever = "0.27.0"
indexmap  = { version = "2.2.6", default-features = false, falsefeatures = ["rayon"] }
kuchikiki = { git = "https://github.com/brave/kuchikiki.git", rev = "28e1ec0" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi        = { version = "3.0.0-alpha.7", default-features = false, features = ["object_indexmap"] }
napi-derive = "3.0.0-alpha.6"

[build-dependencies]
napi-build = "2.1.3"
